Spacing fixed

--- a/src/scss/archive.scss
+++ b/src/scss/archive.scss
@@ -4,11 +4,11 @@
 
 .archive-title {
   font-size: 30px;
+  margin-top: 25px;
+  margin-bottom: 15px;
 }
 
 .item {
-  margin-top: 35px;
-  margin-bottom: 35px;
   padding: 20px 40px;
 }
 
